--- a/themes/custom/casu_bootstrap/css/pages/projets.css
+++ b/themes/custom/casu_bootstrap/css/pages/projets.css
@@ -28,8 +28,7 @@
   .casu-page-projets .views-field-body {
     display: block;
     width: 100px;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
+    text-align: center;
+    width: 100%;
   }
 }
