CASU-011520-1 A propos and mission page. Fixed tablette view for navigation menu

--- a/themes/custom/casu_bootstrap/css/components/front-page.css
+++ b/themes/custom/casu_bootstrap/css/components/front-page.css
@@ -73,14 +73,10 @@
 
 .casu-projets {
   border: 1px solid #1977a6;
-  position: relative;
-  right: 12px;
 }
 
 .casu-contact {
   border: 1px solid #ffd633;
-  position: relative;
-  right: 12px;
 }
 
 .casu-bureau:hover, .casu-projets:hover, .casu-contact:hover {
@@ -95,7 +91,7 @@ svg.fa-users {
   color: orange;
 }
 
-svg.fa-drafting-compass {
+svg.fa-people-carry {
   color: #1977a6;
 }
 
@@ -104,10 +100,6 @@ svg.fa-envelope-open-text {
 }
 
 @media (max-width: 679px) {
-  .casu-bureau, .casu-projets, .casu-contact {
-    display: none;
-  }
-
   #block-views-block-bureau-block-1,
   #block-views-block-projets-block-1,
   #block-views-block-contact-block-1 {
@@ -115,18 +107,33 @@ svg.fa-envelope-open-text {
     padding-bottom: 10px;
     text-align: center;
     border-radius: 4px;
-    margin-top: 3px;
-    margin-bottom: 3px;
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
 
   #block-views-block-bureau-block-1 {
-    border: 1px solid orange;
+    border: 3px solid orange;
   }
   #block-views-block-projets-block-1 {
-    border: 1px solid #1977a6;
+    border: 3px solid #1977a6;
   }
   #block-views-block-contact-block-1 {
-    border: 1px solid #ffd633;
+    border: 3px solid #ffd633;
+  }
+
+  .casu-bureau, .casu-projets, .casu-contact {
+    margin-top: 0px;
+    padding-bottom: 0px;
+    padding-top: 10px;
+    width: 100%;
+    text-transform: uppercase;
+    color: black;
+    font-weight: 700;
+    border: none;
+  }
+
+  .casu-bureau:hover, .casu-projets:hover, .casu-contact:hover {
+    background-color: transparent;
   }
 
   .views-field-nothing .fa-7x {
