--- a/themes/custom/casu_bootstrap/css/components/header.css
+++ b/themes/custom/casu_bootstrap/css/components/header.css
@@ -111,3 +111,12 @@
   height: 77px;
   width: 85px;
 }
+
+@media (min-width: 768px) and (max-width: 990px) {
+  #block-casu-bootstrap-main-menu ul.navbar-nav > li > a {
+    font-size: 12px;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+
+}
